# hoprd-operator

./: .dockerignore  .gitignore  .trivyignore  Cargo.toml  Dockerfile  Makefile  README.md  cluster-hoprd.yaml  hoprd-node-1.yaml  hoprds.hoprnet.org.yaml  justfile  rust-toolchain.toml  rustfmt.toml  sample_config-prod.yaml  sample_config.yaml  sample_config_prod.yaml  sample_secret_content.json
.github/workflows/: build-docker.yml  build-helm-cluster.yml  build-helm-crds.yml  build-helm-operator.yml  ci-build-docker.yml  ci-build-helm.yml  ci-publish-docker.yml  ci-publish-helm.yml  container-master.yml  container-pr.yml  generate-chart-readme.yml  helm-build-and-test-cluster.yml  helm-build-and-test-operator.yml  helm-build-and-test.yml  helm-generate-readme.yml  helm-publish-cluster.yml  helm-publish-operator.yml  helm-publish.yml  publish-docker.yml  publish-helm-cluster.yml  publish-helm-crds.yml  publish-helm-operator.yml  security.yaml
charts/: .trivyignore  Chart.yaml  README.md  values.yaml
charts/cluster-hoprd/: Chart.yaml  README.md  values-stage.yaml  values-staging.yaml  values.yaml
charts/cluster-hoprd/templates/: _helpers.tpl  cluster-hoprd.yaml  configmap-env-vars.yaml  configmap-profiling.yaml  cronjob-upload-hoprd-logs.yaml  identity-hoprd.yaml  identity-pool.yaml  secret-default-env.yaml  secret-env-vars.yaml  secret-wallet.yaml
charts/hoprd-crds/: Chart.yaml  README.md  values-staging.yaml  values.yaml
charts/hoprd-crds/templates/: cluster-hoprd.yaml  hoprd.yaml  identity-hoprd.yaml  identity-pool.yaml  identity.yaml
charts/hoprd-operator/: Chart.yaml  README.md  values-prod.yaml  values-stage.yaml  values-staging.yaml  values.yaml
charts/hoprd-operator/templates/: NOTES.txt  _helpers.tpl  configmap-config.yaml  configmap-metrics.yaml  configmap-scripts.yaml  configmap.yaml  crd-cluster-hoprd.yaml  crd-hoprd.yaml  crd-identity-pool.yaml  crd-identity.yaml  crd.yaml  cronjob-fast-sync.yaml  crossplane.yaml  deployment.yaml  (+15 more)
charts/templates/: crd.yaml  deployment.yaml
metrics-container/: Dockerfile  entrypoint.sh  lighttpd.conf  metrics.sh
scripts/: create-identity-dummy.sh  create-identity.sh  create-resource.sh
src/: actions.rs  bootstrap_operator.rs  cluster.rs  constants.rs  context_data.rs  controller.rs  controller_cluster.rs  controller_hoprd.rs  controller_identity.rs  controller_identity_pool.rs  crd.rs  events.rs  finalizer.rs  hoprd.rs  hoprd_deployment.rs  hoprd_deployment_spec.rs  hoprd_hoprd.rs  hoprd_ingress.rs  hoprd_jobs.rs  hoprd_persistence.rs  hoprd_secret.rs  hoprd_service.rs  hoprd_service_monitor.rs  identity_hoprd.rs  identity_hoprd_persistence.rs  identity_pool.rs  identity_pool_cronjob_faucet.rs  identity_pool_service_account.rs  identity_pool_service_monitor.rs  main.rs  model.rs  operator.rs  operator_config.rs  resource_generics.rs  servicemonitor.rs  utils.rs  webhook_server.rs
src/cluster/: cluster_controller.rs  cluster_hoprd.rs  mod.rs
src/hoprd/: hoprd_controller.rs  hoprd_deployment.rs  hoprd_deployment_spec.rs  hoprd_ingress.rs  hoprd_resource.rs  hoprd_service.rs  mod.rs
src/identity_hoprd/: identity_hoprd_controller.rs  identity_hoprd_persistence.rs  identity_hoprd_resource.rs  mod.rs
src/identity_pool/: identity_pool_controller.rs  identity_pool_cronjob_faucet.rs  identity_pool_resource.rs  identity_pool_service_account.rs  identity_pool_service_monitor.rs  mod.rs
test-data/: clean-node-db.yaml  cluster-hoprd-providence.yaml  cluster-hoprd-saint-louis.yaml  cluster-hoprd.yaml  config.yaml  hoprd-config-template.yaml  hoprd-node-core.yaml  hoprd-node-operator.yaml  hoprd-node.yaml  identity-hoprd.yaml  identity-pool.yaml  sample_config-prod.yaml  sample_config-rpch.yaml  sample_config-stage.yaml  sample_config-staging.yaml  tls.conf
