[package]
name = "hoprd_operator"
version = "0.2.18"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = [
    "macros",
    "rt-multi-thread",
] }
kube = { version = "0.91", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.22", default-features = false, features = [
    "v1_24",
] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
thiserror = "2.0"
time = "0.3"
rand = "0.8.5"
async-recursion = "1.0.5"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"
json-patch = "1.2" # Cannot be upgraded to 2.0 until Kube updates
serde_yaml = "0.9.29"
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter"]}
base64 = "0.22.1"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
