[package]
name = "hoprd_operator"
version = "0.4.2-rc.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"

[dependencies]
tokio = { version = "1.46.1", features = ["full", "macros", "rt-multi-thread"] }
kube = { version = "2.0.1", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.26.0", default-features = false, features = [
    "v1_34",
] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0.145"
serde_yml = "0.0.12"
schemars = "1.1.0"
thiserror = "2.0.17"
time = "0.3"
rand = "0.9.2"
async-recursion = "1.0.5"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"
json-patch = "4.1.0" # Needs to be upgraded every time the dependency 'kube' is upgraded
chrono = "0.4.31"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", default-features = true, features = ["env-filter", "json"]}
base64 = "0.22.1"
axum = { version = "0.8.7", features = ["json"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"

anyhow = "1.0"
jsonptr = "0.7.1"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
